test-mokkery-compiler/src/test/data/diagnostic/mock/many/MockManyWithTypeDuplicatesCannotBeMocked.kt
import dev.mokkery.mockMany

fun main() {
    mockMany<AutoCloseable, <!DUPLICATE_TYPES_FOR_MOCK_MANY!>AutoCloseable<!>>()
}
